# macro-template

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
tests/: it_works.gen
