[package]
name = "macro-template"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.96" }
serde = { version = "1", features = ["derive"] }
serde_tokenstream = "0.2"

[dev-dependencies]
expectorate = "1.1.0"
prettyplease = "0.2.32"
